afegit tuned::profile::disk

--- a/templates/profile.erb
+++ b/templates/profile.erb
@@ -1,4 +1,7 @@
 [main]
+<% if defined?(@description) -%>
+summary=<%= @description %>
+<% end -%>
 <% if defined?(@includeprofile) -%>
 include=<%= @includeprofile %>
 <% end -%>
