--- a/templates/ktune-sysconfig.erb
+++ b/templates/ktune-sysconfig.erb
@@ -32,4 +32,4 @@ ELEVATOR="<%= @elevator %>"
 <% end -%>
 
 # These are the devices, that should be tuned with the ELEVATOR
-ELEVATOR_TUNE_DEVS=""
+ELEVATOR_TUNE_DEVS="/sys/block/{sd,cciss,dm-,dasd,xvd}*/queue/scheduler"
